Refactor greenhouse service for user-based access
Updated GreenhouseServiceImpl methods to require user email for resource access, ensuring operations are scoped to the authenticated user. Changed DTOs to use basic variants where appropriate and refactored duplicate name checks to be user-specific. Improves security and multi-user support.